--- a/index.html
+++ b/index.html
@@ -244,14 +244,20 @@
     </main>
 
     <footer class="page-footer">
-      <div class="container">
-        <a class="logo-footer" href="./index.html"
-          >Web<span class="footer-logo-part">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing &amp; growth solutions.
-        </p>
+      <div class="footer-content">
+        <div class="container">
+          <a class="logo-footer" href="./index.html"
+            >Web<span class="footer-logo-part">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing &amp; growth solutions.
+          </p>
+        </div>
+        <div class="footer-social">
+          <p class="footer-social-text">Social media</p>
+          <ul class="footer-social-list"></ul>
+        </div>
       </div>
     </footer>
   </body>
