--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
           <h2 class="visually-hidden">Features</h2>
           <ul class="hidden-list">
             <li class="hidden-list-item">
+              <div class="li-hidden">
+                
+              </div>
               <h3 class="hidden-title">Strategy</h3>
               <p class="hidden-text">
                 Our goal is to identify the business problem to walk away with
@@ -78,6 +81,7 @@
             </li>
 
             <li class="hidden-list-item">
+              <div class="li-hidden"></div>
               <h3 class="hidden-title">Punctuality</h3>
               <p class="hidden-text">
                 Bring the key message to the brand's audience for the best price
@@ -85,6 +89,7 @@
               </p>
             </li>
             <li class="hidden-list-item">
+              <div class="li-hidden"></div>
               <h3 class="hidden-title">Diligence</h3>
               <p class="hidden-text">
                 Research and confirm brands that present the strongest digital
@@ -92,6 +97,7 @@
               </p>
             </li>
             <li class="hidden-list-item">
+              <div class="li-hidden"></div>
               <h3 class="hidden-title">Technologies</h3>
               <p class="hidden-text">
                 Design practice focused on digital experiences. We bring forth a
