--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
           <ul class="hidden-list">
             <li class="hidden-list-item">
               <div class="li-hidden">
-                
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
               </div>
               <h3 class="hidden-title">Strategy</h3>
               <p class="hidden-text">
@@ -81,7 +83,11 @@
             </li>
 
             <li class="hidden-list-item">
-              <div class="li-hidden"></div>
+              <div class="li-hidden">
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="hidden-title">Punctuality</h3>
               <p class="hidden-text">
                 Bring the key message to the brand's audience for the best price
@@ -89,7 +95,11 @@
               </p>
             </li>
             <li class="hidden-list-item">
-              <div class="li-hidden"></div>
+              <div class="li-hidden">
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="hidden-title">Diligence</h3>
               <p class="hidden-text">
                 Research and confirm brands that present the strongest digital
@@ -97,7 +107,11 @@
               </p>
             </li>
             <li class="hidden-list-item">
-              <div class="li-hidden"></div>
+              <div class="li-hidden">
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
+                </svg>
+              </div>
               <h3 class="hidden-title">Technologies</h3>
               <p class="hidden-text">
                 Design practice focused on digital experiences. We bring forth a
