goit-markup-hw-04

--- a/index.html
+++ b/index.html
@@ -137,6 +137,33 @@
               <div class="team-subtitle-class">
                 <h3 class="team-subtitle">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
+                <ul class="team-icons-list">
+                  <li class="team-list-social">
+                    <svg class="social-team-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </li>
+
+                  <li class="team-list-social">
+                    <svg class="social-team-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </li>
+
+                  <li class="team-list-social">
+                    <svg class="social-team-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </li>
+
+                  <li>
+                    <li class="team-list-social">
+                    <svg class="social-team-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </li>
+                  
+                </ul>
               </div>
             </li>
             <li class="team-item">
