--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                   <li></li>
                   <li class="team-list-social">
                     <svg class="social-team-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </li>
                 </ul>
@@ -198,7 +198,7 @@
                   <li></li>
                   <li class="team-list-social">
                     <svg class="social-team-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </li>
                 </ul>
@@ -237,7 +237,7 @@
                   <li></li>
                   <li class="team-list-social">
                     <svg class="social-team-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </li>
                 </ul>
@@ -276,7 +276,7 @@
                   <li></li>
                   <li class="team-list-social">
                     <svg class="social-team-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </li>
                 </ul>
