--- a/index.html
+++ b/index.html
@@ -139,28 +139,51 @@
                 <p class="team-text">Product Designer</p>
                 <ul class="team-icons-list">
                   <li class="team-list-social">
-                    <svg class="social-team-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
+                    <a
+                      href="https://instagram.com"
+                      class="team-list-social"
+                      style="width: 40px; height: 40px"
+                    >
+                      <svg class="social-team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
                   </li>
 
                   <li class="team-list-social">
-                    <svg class="social-team-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
+                    <a
+                      href="https://instagram.com"
+                      class="team-list-social"
+                      style="width: 40px; height: 40px"
+                    >
+                      <svg class="social-team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
 
                   <li class="team-list-social">
-                    <svg class="social-team-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
+                    <a
+                      href="https://instagram.com"
+                      class="team-list-social"
+                      style="width: 40px; height: 40px"
+                    >
+                      <svg class="social-team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
 
-                  <li></li>
                   <li class="team-list-social">
-                    <svg class="social-team-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
+                    <a
+                      href="https://instagram.com"
+                      class="team-list-social"
+                      style="width: 40px; height: 40px"
+                    >
+                      <svg class="social-team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -178,28 +201,51 @@
                 <p class="team-text">Frontend Developer</p>
                 <ul class="team-icons-list">
                   <li class="team-list-social">
-                    <svg class="social-team-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
+                    <a
+                      href="https://instagram.com"
+                      class="team-list-social"
+                      style="width: 40px; height: 40px"
+                    >
+                      <svg class="social-team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
                   </li>
 
                   <li class="team-list-social">
-                    <svg class="social-team-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
+                    <a
+                      href="https://instagram.com"
+                      class="team-list-social"
+                      style="width: 40px; height: 40px"
+                    >
+                      <svg class="social-team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
 
                   <li class="team-list-social">
-                    <svg class="social-team-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
+                    <a
+                      href="https://instagram.com"
+                      class="team-list-social"
+                      style="width: 40px; height: 40px"
+                    >
+                      <svg class="social-team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
 
-                  <li></li>
                   <li class="team-list-social">
-                    <svg class="social-team-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
+                    <a
+                      href="https://instagram.com"
+                      class="team-list-social"
+                      style="width: 40px; height: 40px"
+                    >
+                      <svg class="social-team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -217,28 +263,51 @@
                 <p class="team-text">Marketing</p>
                 <ul class="team-icons-list">
                   <li class="team-list-social">
-                    <svg class="social-team-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
+                    <a
+                      href="https://instagram.com"
+                      class="team-list-social"
+                      style="width: 40px; height: 40px"
+                    >
+                      <svg class="social-team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
                   </li>
 
                   <li class="team-list-social">
-                    <svg class="social-team-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
+                    <a
+                      href="https://instagram.com"
+                      class="team-list-social"
+                      style="width: 40px; height: 40px"
+                    >
+                      <svg class="social-team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
 
                   <li class="team-list-social">
-                    <svg class="social-team-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
+                    <a
+                      href="https://instagram.com"
+                      class="team-list-social"
+                      style="width: 40px; height: 40px"
+                    >
+                      <svg class="social-team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
 
-                  <li></li>
                   <li class="team-list-social">
-                    <svg class="social-team-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
+                    <a
+                      href="https://instagram.com"
+                      class="team-list-social"
+                      style="width: 40px; height: 40px"
+                    >
+                      <svg class="social-team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -256,28 +325,51 @@
                 <p class="team-text">UI Designer</p>
                 <ul class="team-icons-list">
                   <li class="team-list-social">
-                    <svg class="social-team-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
+                    <a
+                      href="https://instagram.com"
+                      class="team-list-social"
+                      style="width: 40px; height: 40px"
+                    >
+                      <svg class="social-team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
                   </li>
 
                   <li class="team-list-social">
-                    <svg class="social-team-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
+                    <a
+                      href="https://instagram.com"
+                      class="team-list-social"
+                      style="width: 40px; height: 40px"
+                    >
+                      <svg class="social-team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
 
                   <li class="team-list-social">
-                    <svg class="social-team-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
+                    <a
+                      href="https://instagram.com"
+                      class="team-list-social"
+                      style="width: 40px; height: 40px"
+                    >
+                      <svg class="social-team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
 
-                  <li></li>
                   <li class="team-list-social">
-                    <svg class="social-team-icon" width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
+                    <a
+                      href="https://instagram.com"
+                      class="team-list-social"
+                      style="width: 40px; height: 40px"
+                    >
+                      <svg class="social-team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
