--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
             <li class="nav-item">
               <a class="nav-link current" href="./index.html">Studio</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="">Portfolio</a>
-            </li>
+            <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
             <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
           </ul>
         </nav>
