--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 
                   <li class="team-list-social">
                     <a
-                      href="https://instagram.com"
+                      href="https://facebook.com"
                       class="team-list-social"
                       style="width: 40px; height: 40px"
                     >
@@ -470,7 +470,48 @@
         </div>
         <div class="footer-social">
           <p class="footer-social-text">Social media</p>
-          <ul class="footer-social-list"></ul>
+          <ul class="footer-social-list">
+            <li class="footer-li">
+              <a
+                href="https://instagram.com"
+                class="team-list-social"
+                style="width: 40px; height: 40px">
+                <svg class="social-team-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-li">
+              <a
+                href="https://facebook.com"
+                class="team-list-social"
+                style="width: 40px; height: 40px">
+                <svg class="social-team-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-li">
+              <a
+                href="https://twitter.com"
+                class="team-list-social"
+                style="width: 40px; height: 40px">
+                <svg class="social-team-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-li">
+              <a
+                href="https://linkedin.com"
+                class="team-list-social"
+                style="width: 40px; height: 40px">
+                <svg class="social-team-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
