goit-markup-hw-04

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
                   <li class="team-list-social">
                     <a
-                      href="https://instagram.com"
+                      href="https://twitter.com"
                       class="team-list-social"
                       style="width: 40px; height: 40px"
                     >
@@ -162,7 +162,7 @@
 
                   <li class="team-list-social">
                     <a
-                      href="https://instagram.com"
+                      href="https://facebook.com"
                       class="team-list-social"
                       style="width: 40px; height: 40px"
                     >
@@ -174,7 +174,7 @@
 
                   <li class="team-list-social">
                     <a
-                      href="https://instagram.com"
+                      href="https://linkedin.com"
                       class="team-list-social"
                       style="width: 40px; height: 40px"
                     >
@@ -212,7 +212,7 @@
 
                   <li class="team-list-social">
                     <a
-                      href="https://instagram.com"
+                      href="https://twitter.com"
                       class="team-list-social"
                       style="width: 40px; height: 40px"
                     >
@@ -224,7 +224,7 @@
 
                   <li class="team-list-social">
                     <a
-                      href="https://instagram.com"
+                      href="https://facebook.com"
                       class="team-list-social"
                       style="width: 40px; height: 40px"
                     >
@@ -236,7 +236,7 @@
 
                   <li class="team-list-social">
                     <a
-                      href="https://instagram.com"
+                      href="https://linkedin.com"
                       class="team-list-social"
                       style="width: 40px; height: 40px"
                     >
@@ -274,7 +274,7 @@
 
                   <li class="team-list-social">
                     <a
-                      href="https://instagram.com"
+                      href="https://twitter.com"
                       class="team-list-social"
                       style="width: 40px; height: 40px"
                     >
@@ -286,7 +286,7 @@
 
                   <li class="team-list-social">
                     <a
-                      href="https://instagram.com"
+                      href="https://facebook.com"
                       class="team-list-social"
                       style="width: 40px; height: 40px"
                     >
@@ -298,7 +298,7 @@
 
                   <li class="team-list-social">
                     <a
-                      href="https://instagram.com"
+                      href="https://linkedin.com"
                       class="team-list-social"
                       style="width: 40px; height: 40px"
                     >
@@ -336,7 +336,7 @@
 
                   <li class="team-list-social">
                     <a
-                      href="https://instagram.com"
+                      href="https://twitter.com"
                       class="team-list-social"
                       style="width: 40px; height: 40px"
                     >
@@ -360,7 +360,7 @@
 
                   <li class="team-list-social">
                     <a
-                      href="https://instagram.com"
+                      href="https://linkedin.com"
                       class="team-list-social"
                       style="width: 40px; height: 40px"
                     >
@@ -474,7 +474,7 @@
             <li class="footer-li">
               <a
                 href="https://instagram.com"
-                class="team-list-social"
+                class="footer-list-soc"
                 style="width: 40px; height: 40px">
                 <svg class="social-team-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
@@ -484,7 +484,7 @@
             <li class="footer-li">
               <a
                 href="https://facebook.com"
-                class="team-list-social"
+                class="footer-list-soc"
                 style="width: 40px; height: 40px">
                 <svg class="social-team-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
@@ -494,7 +494,7 @@
             <li class="footer-li">
               <a
                 href="https://twitter.com"
-                class="team-list-social"
+                class="footer-list-soc"
                 style="width: 40px; height: 40px">
                 <svg class="social-team-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
@@ -504,7 +504,7 @@
             <li class="footer-li">
               <a
                 href="https://linkedin.com"
-                class="team-list-social"
+                class="footer-list-soc"
                 style="width: 40px; height: 40px">
                 <svg class="social-team-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
