--- a/index.html
+++ b/index.html
@@ -380,13 +380,20 @@
           <h2 class="port-title">Our Portfolio</h2>
           <ul class="port-list">
             <li class="port-item">
-              <img
-                class="port-img"
-                src="./images/BankingApp.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-img">
+                <p class="port-img-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+                <img
+                  class="port-img"
+                  src="./images/BankingApp.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+              </div>
               <div class="port-subtitle-class">
                 <h3 class="port-subtitle">Banking App</h3>
                 <p class="port-text">App</p>
@@ -475,7 +482,8 @@
               <a
                 href="https://instagram.com"
                 class="footer-list-soc"
-                style="width: 40px; height: 40px">
+                style="width: 40px; height: 40px"
+              >
                 <svg class="social-team-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
@@ -485,7 +493,8 @@
               <a
                 href="https://facebook.com"
                 class="footer-list-soc"
-                style="width: 40px; height: 40px">
+                style="width: 40px; height: 40px"
+              >
                 <svg class="social-team-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
@@ -495,7 +504,8 @@
               <a
                 href="https://twitter.com"
                 class="footer-list-soc"
-                style="width: 40px; height: 40px">
+                style="width: 40px; height: 40px"
+              >
                 <svg class="social-team-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
@@ -505,7 +515,8 @@
               <a
                 href="https://linkedin.com"
                 class="footer-list-soc"
-                style="width: 40px; height: 40px">
+                style="width: 40px; height: 40px"
+              >
                 <svg class="social-team-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
