goit-markup-hw-04

--- a/index.html
+++ b/index.html
@@ -381,11 +381,13 @@
           <ul class="port-list">
             <li class="port-item">
               <div class="portfolio-img">
+                <div>
                 <p class="port-img-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
                 </p>
+                </div>
                 <img
                   class="port-img"
                   src="./images/BankingApp.jpg"
