--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
           <h2 class="port-title">Our Portfolio</h2>
           <ul class="port-list">
             <li class="port-item">
-              <div class="portfolio-img">         
+              <div class="portfolio-img">
                 <img
                   class="port-img"
                   src="./images/BankingApp.jpg"
@@ -400,60 +400,95 @@
               </div>
             </li>
             <li class="port-item">
-              <img
-                src="./images/CashlessPayment.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-img">
+                <img
+                  src="./images/CashlessPayment.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <p class="port-img-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="port-subtitle-class">
                 <h3 class="port-subtitle">Cashless Payment</h3>
                 <p class="port-text">Marketing</p>
               </div>
             </li>
             <li class="port-item">
-              <img
-                src="./images/MeditationApp.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-img">
+                <img
+                  src="./images/MeditationApp.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+                <p class="port-img-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="port-subtitle-class">
                 <h3 class="port-subtitle">Meditation App</h3>
                 <p class="port-text">App</p>
               </div>
             </li>
             <li class="port-item">
-              <img
-                src="./images/taxiservice.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-img">
+                <img
+                  src="./images/taxiservice.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <p class="port-img-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="port-subtitle-class">
                 <h3 class="port-subtitle">Taxi Service</h3>
                 <p class="port-text">Marketing</p>
               </div>
             </li>
             <li class="port-item">
-              <img
-                src="./images/ScreenIllustrations.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-img">
+                <img
+                  src="./images/ScreenIllustrations.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <p class="port-img-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="port-subtitle-class">
                 <h3 class="port-subtitle">Screen Illustrations</h3>
                 <p class="port-text">Design</p>
               </div>
             </li>
             <li class="port-item">
-              <img
-                src="./images/OnlineCourses.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-img">
+                <img
+                  src="./images/OnlineCourses.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <p class="port-img-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="port-subtitle-class">
                 <h3 class="port-subtitle">Online Courses</h3>
                 <p class="port-text">Marketing</p>
