goit-markup-hw-04

--- a/index.html
+++ b/index.html
@@ -419,14 +419,14 @@
               </div>
             </li>
             <li class="port-item">
-              <div class="portfolio-img">   
-              <img
-                src="./images/MeditationApp.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
-              <p class="port-img-text">
+              <div class="portfolio-img">
+                <img
+                  src="./images/MeditationApp.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+                <p class="port-img-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
@@ -439,18 +439,18 @@
             </li>
             <li class="port-item">
               <div class="portfolio-img">
-              <img
-                src="./images/taxiservice.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
-              <p class="port-img-text">
+                <img
+                  src="./images/taxiservice.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <p class="port-img-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
                 </p>
-                </div>
+              </div>
               <div class="port-subtitle-class">
                 <h3 class="port-subtitle">Taxi Service</h3>
                 <p class="port-text">Marketing</p>
@@ -458,13 +458,13 @@
             </li>
             <li class="port-item">
               <div class="portfolio-img">
-              <img
-                src="./images/ScreenIllustrations.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
-              <p class="port-img-text">
+                <img
+                  src="./images/ScreenIllustrations.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <p class="port-img-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
@@ -477,18 +477,18 @@
             </li>
             <li class="port-item">
               <div class="portfolio-img">
-              <img
-                src="./images/OnlineCourses.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
-              <p class="port-img-text">
+                <img
+                  src="./images/OnlineCourses.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <p class="port-img-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
                 </p>
-                </div>
+              </div>
               <div class="port-subtitle-class">
                 <h3 class="port-subtitle">Online Courses</h3>
                 <p class="port-text">Marketing</p>
@@ -500,8 +500,8 @@
     </main>
 
     <footer class="page-footer">
-      <div class="footer-content">
-        <div class="container">
+      <div class="container footer-container">
+        <div class="logo-wraper">
           <a class="logo-footer" href="./index.html"
             >Web<span class="footer-logo-part">Studio</span></a
           >
